Fixes video component positioning when zoom scaling is on (#71)
* expands the viewStyles object in order to retain style values rather than overwrite them

* adds overflow hidden to the component view to prevent components placed out of bounds breaking the rig layout

* updates the video component snapshot due to generated style changes

--- a/src/extension-view/component.sass
+++ b/src/extension-view/component.sass
@@ -6,6 +6,7 @@
 
 .component-view
   background-color: #322F37
+  overflow: hidden
 
 .view__wrapper
   padding: 2em
